--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -24,7 +24,7 @@
             <i class="far fa-heart fa-2x fa-fw" style="color:red;"></i>
           <% end %>
         <% end %>
-        <%= link_to(answer.likes.count, "/users") %>
+        <%= link_to(answer.likes.count, "/answers/#{answer.id}/liked") %>
       </div>
       <div class="col-2">
         <%= link_to("/comments/#{answer.id}/new") do %>
@@ -34,7 +34,7 @@
             <i class="far fa-comment fa-2x fa-fw"></i>
           <% end %>
         <% end %>
-        <%= link_to(answer.comments.count, "/users") %>
+        <%= link_to(answer.comments.count, "/answers/#{answer.id}/commented") %>
       </div>
     </div>
   </div>
