--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -21,7 +21,7 @@
             <i class="far fa-heart fa-2x fa-fw" style="color:red;"></i>
           <% end %>
         <% end %>
-        <%= link_to(@likes_count, "/users") %>
+        <%= link_to(@likes_count, "/answers/#{@answer.id}/liked") %>
       </div>
       <div class="col-2">
         <%= link_to("/comments/#{@answer.id}/new") do %>
@@ -31,13 +31,13 @@
             <i class="far fa-comment fa-2x fa-fw"></i>
           <% end %>
         <% end %>
-        <%= link_to(@comments_count, "/users") %>
+        <%= link_to(@comments_count, "/answers/#{@answer.id}/commented") %>
       </div>
     </div>
   </div>
 </div>
 
-<% @answer.comments.each do |comment| %>
+<% @comments.each do |comment| %>
 <div class="container">
   <div class="border p-3 mb-5">
     <div class="row">
@@ -59,7 +59,7 @@
             <i class="far fa-heart fa-2x fa-fw" style="color:red;"></i>
           <% end %>
         <% end %>
-        <%= link_to(comment.commentlikes.count, "/users") %>
+        <%= link_to(comment.commentlikes.count, "/comments/#{comment.id}/liked") %>
       </div>
     </div>
   </div>
