--- a/app/views/users/followed.html.erb
+++ b/app/views/users/followed.html.erb
@@ -4,7 +4,19 @@
     <div class="row">
       <%= image_tag "/user_images/#{follower.image_name}", class: "image-fluid col-1" %>
       <%= link_to(follower.name, "/users/#{follower.id}", class: "col-8 font-weight-bold") %>
-      <button type="button" class="btn btn-primary col-2">フォロー</button>
+      <% unless @current_user == follower %>
+        <% if @current_user.following?(follower) %>
+          <%= form_for(@current_user.follows.find_by(follow_id: follower.id), html: { method: :delete }) do |f| %>
+            <%= hidden_field_tag :follow_id, follower.id %>
+            <%= f.submit 'フォロー解除', class: 'btn btn-primary btn-block' %>
+          <% end %>
+        <% else %>
+          <%= form_for(@current_user.follows.build) do |f| %>
+            <%= hidden_field_tag :follow_id, follower.id %>
+            <%= f.submit 'フォローする', class: 'btn btn-primary btn-block' %>
+          <% end %>
+        <% end %>
+      <% end %>
     </div>
     <div class="row">
       <p class="col pt-4"><%= follower.introduction %></p>
